# validate-mypy-deps

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  commitlint.config.js  pyproject.toml
src/validate_mypy_deps/: cli.py
